methods.flowerpot.FlowerCase.scala.error
Compilation error:
FlowerCase:65: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.FlowerCase'
override def run(){
             ^