methods.flowerpot.FlowerCase.scala.code
def flower(c:Color) {
  setBrushColor(c)
  brushDown()
  forward()
  forward()
  backward()
  left()
  forward()
  back()
  forward()
  forward()
  back()
  forward()
  right()
  brushUp()
  setBrushColor(Color.YELLOW)
  brushDown()
  brushUp()
  backward()
}



def growFlowers(){
flower(Color.RED)
for (i <- 1 to 4) {
  forward()
}
flower(Color.CYAN)
backward()
right()
forward()
flower(Color.ORANGE)
for (i <- 1 to 3){
  forward()
}

left()
forward()
flower(Color.GREEN)
for (i<- 1 to 4) {
  backward()
}
flower(Color.PINK)
  
}

def double(){
  growFlowers()
  left()
  forward()
  forward()
  right()
  for (i <- 1 to 6){
		forward()
  }
  flower(Color.BLUE)
  left()
  forward()
  forward()
  right()
  growFlowers()
  
}
override def run(){
double()
right()
forward()
left()
for (i <- 1 to 8) {
  backward()
}
right()
forward()
forward()
forward()
left()
double()
  
  
}